fix(ui): alignments for the property text key

--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -68,13 +68,13 @@
     }
 
     .property-k {
+      @apply inline-block overflow-hidden text-ellipsis whitespace-nowrap leading-[27px];
+
       .jtrigger {
         &-id {
           @apply left-[16px];
         }
       }
-
-      @apply inline-block overflow-hidden text-ellipsis whitespace-nowrap;
     }
 
     .property-value {
